# hcc-worker-security-scans

security-scan/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
security-scan/src/security_scan/: __init__.py  config.py  main.py
security-scan/src/security_scan/db/: __init__.py  connection.py  encryption.py  models.py
security-scan/src/security_scan/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py
security-scan/src/security_scan/scanner/: __init__.py  prowler_wrapper.py  result_processor.py
security-scan/src/security_scan/worker/: __init__.py  consumer.py
